--- a/package.json
+++ b/package.json
@@ -4,18 +4,34 @@
   "description": "Booking Application.",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "build": "npx tsc",
+    "start": "node server.ts",
+    "dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan Kaleli Gabriel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
-    "morgan":  "^1.10.0",
-    "nodemon": "^3.1.4"
-
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
+    "slugify": "^1.6.6",
+    "ts-node": "^10.9.2",
+    "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.5.0",
+    "@types/validator": "^13.12.1",
+    "typescript": "^5.5.4"
   }
 }
