--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "pug": "^3.0.3",
     "slugify": "^1.6.6",
     "ts-node": "^10.9.2",
     "validator": "^13.12.0"
@@ -28,9 +31,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.0",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pug": "^2.0.10",
     "@types/validator": "^13.12.1",
     "typescript": "^5.5.4"
   }
