--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node server.ts",
-    "start:prod":"set NODE_ENV=production && nodemon server.ts",
+    "start": "node dist/server.js",
+    "start:prod": "cross-env NODE_ENV=production && node dist/server.js",
     "dev": "nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "prepare":"husky install"
   },
   "author": "Ryan Kaleli Gabriel",
   "license": "ISC",
@@ -42,12 +43,17 @@
     "@types/express": "^4.17.21",
     "@types/express-mongo-sanitize": "^2.1.0",
     "@types/html-to-text": "^9.0.4",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.0",
     "@types/nodemailer": "^6.4.15",
     "@types/pug": "^2.0.10",
     "@types/validator": "^13.12.1",
+    "cross-env": "^7.0.3",
+    "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   }
 }
