--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ web_modules/
 .env.production.local
 .env.local
 config.env
-
+.env.test
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
