--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Run tests
       run: npm test
       env: 
-        DATABASE : ${{ secrets.DATABASE }}
-        DATABASE_PASSWORD: ${{ secrets.DATABSE_PASSWORD }}
+        DATABASE : ${{ env.DATABASE }}
+        DATABASE_PASSWORD: ${{ env.DATABSE_PASSWORD }}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
