--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/server.js",
     "start:prod": "cross-env NODE_ENV=production && node dist/server.js",
     "dev": "nodemon server.ts",
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest"
+
   },
   "author": "Ryan Kaleli Gabriel",
   "license": "ISC",
