--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,10 +33,8 @@ jobs:
     - name: Run tests
       env: 
         DATABASE : ${{ env.DATABASE }}
-        DATABASE_PASSWORD: ${{ env.DATABSE_PASSWORD }}
-      run: echo "$DATABASE $DATABASE_PASSWORD
-
-      
+        DATABASE_PASSWORD: ${{ env.DATABASE_PASSWORD }}
+      run: npm test
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
