--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,9 +13,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    services:
+      mongo:
+        image: mongo:6.0
+        ports:
+         - 27017:27017
+        options: >
+          --health-cmd "mongosh --eval 'db.adminCommand({ ping: 1 })'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     strategy:
       matrix:
         node-version: [20.x]
+    env:
+      TEST_DB: mongodb://localhost:27017/bookify
 
     steps:
     - name: Checkout Code
@@ -30,9 +43,18 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Wait for MongoDB to be ready
+      run: |
+       for i in {1..30}; do
+        nc -z localhost 27017 && echo "MongoDB is up" && exit 0
+        echo "Waiting for MongoDB..."
+        sleep 1
+       done
+       echo "MongoDB did not start in time" && exit 1
+
     - name: Run tests
       env: 
-        TEST_DB : ${{ secrets.TEST_DB }}
+        TEST_DB : ${{ env.TEST_DB }}
 
       run: npm test
 
