--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,6 +27,8 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
+        mongodb-version: ['6.0', '7.0', '8.0']
+        
     env:
       TEST_DB: mongodb://localhost:27017/bookify
 
@@ -39,18 +41,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.11.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
       run: npm install
-
-    - name: Wait for MongoDB to be ready
-      run: |
-       for i in {1..30}; do
-        nc -z localhost 27017 && echo "MongoDB is up" && exit 0
-        echo "Waiting for MongoDB..."
-        sleep 1
-       done
-       echo "MongoDB did not start in time" && exit 1
 
     - name: Run tests
       env: 
