--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,22 +15,22 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mongo:
-        image: mongo:${{ matrix.mongodb-version }}
+        image: mongo:6.0
         ports:
-          - 27017:27017
+         - 27017:27017
         options: >
           --health-cmd "mongosh --eval 'db.adminCommand({ ping: 1 })'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        
+          
     strategy:
       matrix:
         node-version: [20.x]
         mongodb-version: ['6.0', '7.0', '8.0']
         
     env:
-      TEST_DB: mongodb://mongo:27017/bookify
+      TEST_DB: mongodb://localhost:27017/bookify
 
     steps:
     - name: Checkout Code
@@ -41,42 +41,36 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.11.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
       run: npm install
 
-    - name: Wait for MongoDB to be ready
-      run: |
-        for i in {1..30}; do
-          nc -z mongo 27017 && echo "MongoDB is up" && exit 0
-          echo "Waiting for MongoDB..."
-          sleep 1
-        done
-        echo "MongoDB did not start in time" && exit 1
-
     - name: Run tests
       env: 
         TEST_DB : ${{ env.TEST_DB }}
+
       run: npm test
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-       
+      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to Docker Hub
+    - name : Login to docker hub
       uses: docker/login-action@v3
       with: 
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN}}
- 
+
     - name: Build and push
       uses: docker/build-push-action@v6
       with: 
         push: true
         tags: ryankaleligabriel/bookify-api-${{ github.sha }}:latest
-
-
     
 
