--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,24 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    services:
-      mongo:
-        image: mongo:6.0
-        ports:
-         - 27017:27017
-        options: >
-          --health-cmd "mongosh --eval 'db.adminCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-          
     strategy:
       matrix:
         node-version: [20.x]
-        mongodb-version: ['6.0', '7.0', '8.0']
-        
-    env:
-      TEST_DB: mongodb://localhost:27017/bookify
 
     steps:
     - name: Checkout Code
@@ -41,17 +26,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.11.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
       run: npm install
 
     - name: Run tests
       env: 
-        TEST_DB : ${{ env.TEST_DB }}
+        TEST_DB : ${{ secrets.TEST_DB }}
 
       run: npm test
 
@@ -72,5 +53,3 @@ jobs:
       with: 
         push: true
         tags: ryankaleligabriel/bookify-api-${{ github.sha }}:latest
-    
-
