--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,9 +19,9 @@ jobs:
             env:
               MONGO_INITDB_ROOT_USERNAME: ${{secrets.DB_NAME}}
               MONGO_INITDB_ROOT_PASSWORD: ${{secrets.DB_PASSWORD}}
-              MONGO_INITDB_DATABASE: bookify
+              MONGO_INITDB_DATABASE: admin
               options: >-
-                --health-cmd "mongo --eval 'db.adminCommand(\"ping\")'" 
+                --health-cmd "mongosh --eval 'db.adminCommand({ ping: 1 })'"
                 --health-interval 10s
                 --health-timeout 5s
                 --health-retries 5
@@ -46,7 +46,7 @@ jobs:
 
     - name: Run tests
       env: 
-        TEST_DB : mongodb://localhost:27017/bookify
+        TEST_DB : mongodb://${{ secrets.DB_ROOT_USERNAME }}:${{ secrets.DB_ROOT_PASSWORD }}@localhost:27017/bookify?authSource=admin
 
       run: npm test
 
