--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,20 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    services:
-          mongo:
-            image: mongo:6.0
-            env:
-              MONGO_INITDB_ROOT_USERNAME: ${{secrets.DB_NAME}}
-              MONGO_INITDB_ROOT_PASSWORD: ${{secrets.DB_PASSWORD}}
-              MONGO_INITDB_DATABASE: admin
-              options: >-
-                --health-cmd "mongosh --eval 'db.adminCommand({ ping: 1 })'"
-                --health-interval 10s
-                --health-timeout 5s
-                --health-retries 5
-            ports:
-              - 27017:27017
+
     strategy:
       matrix:
         node-version: [20.x]
@@ -40,6 +27,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.11.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
       run: npm install
