--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -38,8 +38,8 @@ jobs:
       run: npm install
 
     - name: Run tests
-      env: 
-        TEST_DB : mongodb+srv://kaleligabriel6:MSY0iI6DHnWW9sVy@cluster0.75jojyu.mongodb.net/bookify?retryWrites=true&w=majority&appName=Cluster0
+      # env: 
+      #   TEST_DB : mongodb+srv://kaleligabriel6:MSY0iI6DHnWW9sVy@cluster0.75jojyu.mongodb.net/bookify?retryWrites=true&w=majority&appName=Cluster0
 
       run: npm test
 
