--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,32 +33,42 @@ jobs:
       uses: supercharge/mongodb-github-action@1.11.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
+    - name: Wait for MongoDB to be ready
+      run: |
+        for i in {1..10}; do
+          nc -z localhost 27017 && echo "MongoDB is up" && exit 0
+          echo "Waiting for MongoDB..."
+          sleep 2
+        done
+        echo "MongoDB did not start in time" && exit 1
+
+        
     - name: Set TEST_DB environment variable
-      run: echo "TEST_DB=mongodb://localhost:27017/testdb" >> $GITHUB_ENV
+      run: echo "TEST_DB=mongodb://localhost:27017/bookify" >> $GITHUB_ENV
 
-    # - name: Install dependencies
-    #   run: npm install
+    - name: Install dependencies
+      run: npm install
 
-    # - name: Run tests
-    #   env: 
-    #     TEST_DB : ${{secrets.TEST_DB}}
+    - name: Run tests
+      env: 
+        TEST_DB : ${{env.TEST_DB}}
 
-    #   run: npm test
+      run: npm test
 
-    # - name: Set up QEMU
-    #   uses: docker/setup-qemu-action@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
       
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    # - name : Login to docker hub
-    #   uses: docker/login-action@v3
-    #   with: 
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN}}
+    - name : Login to docker hub
+      uses: docker/login-action@v3
+      with: 
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN}}
 
-    # - name: Build and push
-    #   uses: docker/build-push-action@v6
-    #   with: 
-    #     push: true
-    #     tags: ryankaleligabriel/bookify-api-${{ github.sha }}:latest
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with: 
+        push: true
+        tags: ryankaleligabriel/bookify-api-${{ github.sha }}:latest
