--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -61,7 +61,16 @@ jobs:
 
     - name: Run tests
       env: 
-        TEST_DB : ${{env.TEST_DB}}
+        NODE_ENV: test
+        TEST_DB: ${{ secrets.TEST_DB }}
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        JWT_EXPIRES_IN: ${{ secrets.JWT_EXPIRES_IN }}
+        JWT_COOKIE_EXPIRES_IN: ${{ secrets.JWT_COOKIE_EXPIRES_IN }}
+        EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
+        EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+        EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+        EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+        EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
 
       run: npm test
 
