--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,13 +11,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [20.x]
-        mongodb-version: ['6.0', '7.0', '8.0']
 
     steps:
     - name: Checkout Code
@@ -28,20 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.11.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
-    - name: Wait for MongoDB to be ready
-      run: |
-        for i in {1..10}; do
-          nc -z localhost 27017 && echo "MongoDB is up" && exit 0
-          echo "Waiting for MongoDB..."
-          sleep 2
-        done
-        echo "MongoDB did not start in time" && exit 1
-
         
     - name: Set environment variables
       run: | 
@@ -87,10 +71,19 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN}}
 
     - name: Build and push
-
       uses: docker/build-push-action@v6
       with: 
         push: true
         tags: ryankaleligabriel/bookify-api-${{ github.sha }}:latest
-      
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps: 
+     - name: Deploy to production
+       uses: johnbeynon/render-deploy-action@v0.0.8
+       with: 
+        service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+        api-key: ${{ secrets.MY_RENDER_API_KEY }}
+        wait-for-success: true
 
