--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -79,10 +79,10 @@ jobs:
   deploy:
    runs-on: ubuntu-latest
    steps:
-      - uses: actions/checkout@v3
-      - uses: JorgeLNJunior/render-deploy@v1.4.4
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
-          service_id: ${{ secrets.MY_RENDER_SERVICE_ID }}
-          api_key: ${{ secrets.MY_RENDER_API_KEY }}
-          wait_deploy: true 
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+          wait-for-success: true
 
