--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -74,7 +74,7 @@ jobs:
       uses: docker/build-push-action@v6
       with: 
         push: true
-        tags: ryankaleligabriel/bookify-api:v1
+        tags: ryankaleligabriel/bookify-api:latest
 
   deploy:
    runs-on: ubuntu-latest
