--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^3.1.4",
     "pug": "^3.0.3",
     "slugify": "^1.6.6",
+    "snyk": "^1.1294.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "validator": "^13.12.0"
